# terra-atlas-leptos

./: .gitignore  Cargo.toml  DEMO.md  Trunk.toml  index.html
.github/workflows/: check.yml  deploy.yml
assets/data/: chokepoints.json  climate-projects.json  constellations.json  critical-infrastructure.json  earth-regions.json  fossil-deposits.json  infrastructure.json  maglev-network.json  major-cities-1m.json  major-cities.csv  nasa-eonet.json  nasa-firms.json  nuclear-sites.json  reactor-twin-demo.json  resontia-vaults.json  shipping-lanes-simplified.json  sites-clustered.json  submarine-cables.geojson  supply-routes.json  terra-lumina-sites.json  usgs-earthquakes.json  volcanoes.json
scripts/: cluster-energy-sites.py  screenshot.sh  sync-to-standalone.sh
sol-atlas-core/: Cargo.toml
sol-atlas-core/src/: aesthetics.rs  confluence.rs  constants.rs  data.rs  economics.rs  energy_trading.rs  geo.rs  geometry.rs  lib.rs  lod.rs  math.rs  mycelix_flows.rs  simulation.rs  solar_system.rs  timeline.rs  types.rs  visual_validation.rs
src/: app.rs  main.rs
src/components/: globe_canvas.rs  hud.rs  info_panel.rs  layer_panel.rs  legend.rs  mod.rs  planet_nav.rs  reactor_twin_demo.rs  timeline.rs  tooltip.rs  whisper.rs
src/data/: geo.rs  holochain.rs  mod.rs  reactor_twin.rs  static_data.rs  types.rs
src/renderer/: camera.rs  geometry.rs  hex.rs  math.rs  mod.rs  picking.rs  shaders.rs  texture.rs
src/state/: data_state.rs  globe_state.rs  mod.rs
src/vitality/: circadian.rs  homeostasis.rs  mod.rs  thermodynamic.rs
style/: main.css
terra-atlas-core/: Cargo.toml
terra-atlas-core/src/: aesthetics.rs  constants.rs  data.rs  energy_trading.rs  geo.rs  lib.rs  lod.rs  mycelix_flows.rs  picking.rs  solar_system.rs  timeline.rs  types.rs
