# Copyright (C) 2024-2026 Tristan Stoltz / Luminous Dynamics
# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "sol-atlas-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shared types, geo math, and constants for Sol Atlas renderers"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
